--- a/operaciones.html
+++ b/operaciones.html
@@ -17,15 +17,15 @@
     </div>
 
     <div class="container text-center">
-        <div class="row">
-          <div class="col align-self-start">
-           <button class="btn btn-primary">Realizar Retiro</button>
-           <button class="btn btn-primary">Realizar Retiro</button>
+        <div class="row justify-content-between">
+          <div class="col  flex-column">
+           <div class="p-2"><a href="retiro.html" class="btn btn-primary">Realizar Retiro</a></div>
+           <div class="p-2"><button class="btn btn-primary">Consultar Saldo</button></div>
           </div>
-          <div class="col align-self-end">
-            <button class="btn btn-primary">Cambiar Clave</button>
-            <button class="btn btn-primary">Realizar Retiro</button>
-            <button class="btn btn-primary">Cancelar</button>
+          <div class="col flex-column">
+            <div class="p-2"><button class="btn btn-primary">Cambiar Clave</button></div>
+            <div class="p-2"><button class="btn btn-primary">Otros Servicios</button></div>
+            <div class="p-2"><button class="btn btn-secondary">Cancelar</button></div>
           </div>
         </div>
       </div>
