--- a/retiro.html
+++ b/retiro.html
@@ -3,9 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>Retiro</title>
 </head>
 <body>
-    
+
+    <div class="container mt-4 justify-content-center align-items-center">
+        <div class="d-flex justify-content-center text-center">
+        <img src="./img/descarga.png" alt="">
+        <p  class="mt-5">El Banco mundial tiene un conjunto de servicios a su disposición. <br> Seleccione la opcion de transaccion que <br> desea retirar</p>
+    </div>
+
+
+
+    <div class="container text-center">
+        <div class="row mb-4">
+            <div class="col">
+               <button class="btn btn-primary w-25">20.000</button>
+            </div>
+            <div class="col">
+                <button class="btn btn-primary w-25">120.000</button>
+            </div>
+        </div>
+        <div class="row mb-4">
+            <div class="col">
+                <button class="btn btn-primary w-25">50.000</button>
+            </div>
+            <div class="col">
+                <button class="btn btn-primary w-25">250.000</button>
+            </div>
+        </div>
+        <div class="row mb-4">
+            <div class="col">
+                <button class="btn btn-primary w-25">80.000</button>
+            </div>
+            <div class="col">
+                <button class="btn btn-primary w-25">400.000</button>
+            </div>
+        </div>
+        <div class="row mb-4">
+            <div class="col">
+                <button class="btn btn-secondary w-25">Cancelar</button>
+            </div>
+            <div class="col">
+                <button class="btn btn-secondary w-25">Digite otro valor...</button>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
 </html>
