agrego retiro , otro_valor y clave

--- a/retiro.html
+++ b/retiro.html
@@ -21,34 +21,35 @@
     <div class="container text-center">
         <div class="row mb-4">
             <div class="col">
-               <button class="btn btn-primary w-25">20.000</button>
+               <a  class="btn btn-primary w-25">20.000</a>
             </div>
             <div class="col">
-                <button class="btn btn-primary w-25">120.000</button>
-            </div>
-        </div>
-        <div class="row mb-4">
-            <div class="col">
-                <button class="btn btn-primary w-25">50.000</button>
-            </div>
-            <div class="col">
-                <button class="btn btn-primary w-25">250.000</button>
+                <a  class="btn btn-primary w-25">120.000</a>
             </div>
         </div>
         <div class="row mb-4">
             <div class="col">
-                <button class="btn btn-primary w-25">80.000</button>
+                <a href="" class="btn btn-primary w-25">50.000</a>
             </div>
             <div class="col">
-                <button class="btn btn-primary w-25">400.000</button>
+                <a href="" class="btn btn-primary w-25">250.000</a>
+            </div>
+        </div>
+        
+        <div class="row mb-4">
+            <div class="col">
+                <a class="btn btn-primary w-25">80.000</a>
+            </div>
+            <div class="col">
+                <a class="btn btn-primary w-25">400.000</a>
             </div>
         </div>
         <div class="row mb-4">
             <div class="col">
-                <button class="btn btn-secondary w-25">Cancelar</button>
+                <a href="operaciones.html" class="btn btn-secondary w-25">Cancelar</a>
             </div>
             <div class="col">
-                <button class="btn btn-secondary w-25">Digite otro valor...</button>
+                <a href="otro_valor.html" class="btn btn-secondary w-25">Digite otro valor...</a>
             </div>
         </div>
     </div>
