agrego interfaz resultado_retiro

--- a/clave.html
+++ b/clave.html
@@ -17,8 +17,8 @@
 
     <div class="container-clave text-center">
         <p>Digite su clave de cuadro digitos</p>
-        <input type="password">
-        <div class="cuadro d-flex flex-column mt-4 p-2">
+        <input class="p-3" type="password">
+        <div class="cuadro d-flex flex-column mt-4 p-2 align-items-center">
         <div class="row d-flex justify-content-center mb-2">
             <div class="col"><button class="btn btn-primary">1</button></div>
             <div class="col"><button class="btn btn-primary">2</button></div>
@@ -34,15 +34,15 @@
             <div class="col"><button class="btn btn-primary">8</button></div>
             <div class="col"><button class="btn btn-primary">9</button></div>
         </div>
-        <div class="row mb-2">
+        <div class="row mb-3">
             <div class="col"><button class="btn btn-primary">.</button></div>
             <div class="col"><button class="btn btn-primary">0</button></div>
             <div class="col"><button class="btn btn-primary">#</button></div>
         </div>
-        <div class="">
+        <div class="mt-2">
             <div class="row d-flex justify-content-between">
-                <div class="col"><a href="" class="btn btn-secondary">Cancelar</a></div>
-                <div class="col"><a href="" class="btn btn-primary">Aceptar</a></div>
+                <div class="col"><a href="index.html" class="btn btn-secondary w-100">Cancelar</a></div>
+                <div class="col"><a href="resultado_retiro.html" class="btn btn-primary w-100">Aceptar</a></div>
             </div>
         </div>
         </div>
