--- a/otro_valor.html
+++ b/otro_valor.html
@@ -24,10 +24,10 @@
         <div>
             <div class="row mt-5">
                 <div class="col">
-                    <a href="" class="btn btn-secondary" >Cancelar</a>
+                    <a href="index.html" class="btn btn-secondary" >Cancelar</a>
                 </div>
                 <div class="col">
-                    <a href="" class="btn btn-primary" >Continuar</a>
+                    <a href="clave.html" class="btn btn-primary" >Continuar</a>
                 </div>
             </div>
         </div>
