--- a/retiro.html
+++ b/retiro.html
@@ -46,7 +46,7 @@
         </div>
         <div class="row mb-4">
             <div class="col">
-                <a href="operaciones.html" class="btn btn-secondary w-25">Cancelar</a>
+                <a href="index.html" class="btn btn-secondary w-25">Cancelar</a>
             </div>
             <div class="col">
                 <a href="otro_valor.html" class="btn btn-secondary w-25">Digite otro valor...</a>
