--- a/operaciones.html
+++ b/operaciones.html
@@ -25,7 +25,7 @@
           <div class="col flex-column">
             <div class="p-2"><button class="btn btn-primary">Cambiar Clave</button></div>
             <div class="p-2"><button class="btn btn-primary">Otros Servicios</button></div>
-            <div class="p-2"><button class="btn btn-secondary">Cancelar</button></div>
+            <div class="p-2"><a href="index.html" class="btn btn-secondary">Cancelar</a></div>
           </div>
         </div>
       </div>
